2009-01-18  Sven Neumann  <sven@gimp.org>

	* configure.in: depend on babl >= 0.0.23 and GEGL >= 0.0.22.

2009-01-18  Sven Neumann  <sven@gimp.org>

	* configure.in (CPPFLAGS): added -DBABL_DISABLE_DEPRECATED.

	* plug-ins/common/unsharp-mask.c: formatting.

2009-01-18  Martin Nordholts  <martinn@svn.gnome.org>

	Bug 563337 – Rectangle Select Tool does not allow 1:1 fixed ratio

	* libgimpwidgets/gimpnumberpairentry.c: When testing if the value
	changed on focus-out we shall test against the current values, not
	the default values.

2009-01-17  Michael Natterer  <mitch@gimp.org>

	* all files with a GPL header and all COPYING files:

	Change licence to GPLv3 (and to LGPLv3 for libgimp).

	Cleaned up some copyright headers and regenerated the parsers in
	the ImageMap plugin.

2009-01-17  Sven Neumann  <sven@gimp.org>

	Bug 568095 – Patch to improve unsharp mask performance

	* plug-ins/common/unsharp-mask.c (unsharp_region): applied patch
	from Winston Chang that improves performance for larger radii by
	approximating the gaussian blur with a three-pass box blur.

2009-01-17  Martin Nordholts  <martinn@svn.gnome.org>

	Adapt to new babl API, s/babl_format/babl_format_from_name/

	* app/gegl/gimp-gegl-utils.c
	* app/gegl/gimpoperationpointlayermode.c
	* app/gegl/gimpoperationtilesource.c

2009-01-17  Sven Neumann  <sven@gimp.org>

	Bug 568021 – Unused code in unsharp-mask.c

	* plug-ins/common/unsharp-mask.c: applied patch from Winston Chang
	that removes unused code.

2009-01-17  Sven Neumann  <sven@gimp.org>

	Bug 568016 – Black pullout parameter of plug-in-newsprint has
	no effect

	* plug-ins/common/newsprint.c: fixed the documentation of the
	colorspace parameter.

2009-01-13  Sven Neumann  <sven@gimp.org>

	* INSTALL
	* autogen.sh
	* configure.in: require intltool >= 0.40.1. Looks like that was
	the first version with support for the NC_ keyword.

2009-01-13  Kevin Cozens  <kcozens@cvs.gimp.org>

	* app/tools/gimpforegroundselecttool.c: Corrected spelling error